--- a/app/globals.css
+++ b/app/globals.css
@@ -3,12 +3,16 @@
 @tailwind utilities;
 
 body {
-  @apply bg-white dark:bg-medium-gray dark:text-white
+  @apply bg-white dark:bg-medium-gray dark:text-white themeTransition
+}
+
+.themeTransition {
+  @apply transition-colors duration-300
 }
 
 .sideBarButton {
   @apply relative flex flex-row items-center h-11 focus:outline-none hover:bg-gray-50 text-gray-600 hover:text-gray-800 
-  border-l-4 border-transparent hover:border-orange-500 pr-6
+  border-l-4 border-transparent hover:border-orange-500 pr-6 transition duration-200
 }
 
 .sideBarCategories {
@@ -16,7 +20,7 @@ body {
 }
 
 .sideBarCategoriesText {
-  @apply text-sm tracking-wide dark:text-gray-400 text-gray-600 font-semibold
+  @apply text-sm tracking-wide dark:text-gray-400 text-gray-900 font-semibold themeTransition
 }
 
 .sideBarIcon {
@@ -24,7 +28,7 @@ body {
 }
 
 .sideBarIconText {
-  @apply ml-2 text-sm tracking-wide truncate
+  @apply ml-2 text-sm tracking-wide truncate dark:text-light-gray text-dark-gray
 }
 
 .sideBarSvg {
