Updated UI. Finished upload tab. Added pages and Tables for Groups and Agencies

--- a/app/globals.css
+++ b/app/globals.css
@@ -50,3 +50,13 @@ p {
 .sideBarIconSize {
   @apply w-5 h-5
 }
+
+.tabButton {
+  @apply cursor-pointer inline-flex p-4 border-b-2 border-transparent 
+  hover:border-orange-500 dark:hover:text-gray-300 transition duration-500
+}
+
+.buttonWithIcon {
+  @apply flex items-center px-5 py-2 text-sm text-gray-700 capitalize transition-colors duration-200 bg-transparent 
+  border gap-x-2  dark:text-gray-200 dark:border-gray-700 hover:bg-orange-500 hover:text-white
+}
