--- a/app/globals.css
+++ b/app/globals.css
@@ -137,7 +137,7 @@ p {
 }
 
 .button {
-  @apply px-5 py-2 text-sm text-gray-700 capitalize transition-colors duration-200 bg-transparent 
+  @apply px-5 py-2 text-sm text-gray-700 transition-colors duration-200 bg-transparent 
   border gap-x-2  dark:text-gray-200 dark:border-gray-700 hover:bg-orange-500 hover:text-white
 }
 
