--- a/app/globals.css
+++ b/app/globals.css
@@ -141,4 +141,7 @@ p {
   border gap-x-2  dark:text-gray-200 dark:border-gray-700 hover:bg-orange-500 hover:text-white
 }
 
+.react-colorful__last-control {
+  border-radius: 0 0 0 0 !important;
+}
 
