--- a/app/globals.css
+++ b/app/globals.css
@@ -229,3 +229,14 @@ p {
 .pswp__img {
   object-fit: contain;
 }
+
+.snapshot-generator {
+  display: block;
+  height: 1px;
+  left: 0;
+  object-fit: contain;
+  position: fixed;
+  top: 0;
+  width: 1px;
+  z-index: -1;
+}
