--- a/app/globals.css
+++ b/app/globals.css
@@ -230,6 +230,32 @@ p {
   object-fit: contain;
 }
 
+.gradient-container {
+ 
+  background-size: 400% 400%;
+
+  -webkit-animation: clientAnimation 6s ease infinite;
+  -moz-animation: clientAnimation 6s ease infinite;
+  animation: clientAnimation 6s ease infinite;
+}
+
+@-webkit-keyframes clientAnimation {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@-moz-keyframes clientAnimation {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@keyframes clientAnimation {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+
+
 .snapshot-generator {
   display: block;
   height: 1px;
