--- a/app/globals.css
+++ b/app/globals.css
@@ -78,23 +78,23 @@
 }
 
 body {
-  @apply bg-white dark:bg-medium-gray dark:text-white themeTransition 
+  @apply bg-medium-gray text-white themeTransition 
 }
 
 h1 {
-  @apply text-3xl font-bold text-gray-900 dark:text-white themeTransition
+  @apply text-3xl font-bold text-white themeTransition
 }
 
 h2 {
-  @apply text-xl font-semibold text-gray-900 dark:text-white themeTransition
+  @apply text-xl font-semibold text-white themeTransition
 }
 
 h4 {
-  @apply font-semibold text-gray-900 dark:text-white themeTransition
+  @apply font-semibold text-white themeTransition
 }
 
 p {
-  @apply text-sm text-gray-600 dark:text-gray-400 themeTransition
+  @apply text-sm text-gray-400 themeTransition
 }
 
 .themeTransition {
@@ -111,7 +111,7 @@ p {
 }
 
 .sideBarCategoriesText {
-  @apply text-sm tracking-wide dark:text-gray-400 text-gray-900 font-semibold themeTransition
+  @apply text-sm tracking-wide text-gray-400 font-semibold themeTransition
 }
 
 .sideBarIcon {
@@ -119,7 +119,7 @@ p {
 }
 
 .sideBarIconText {
-  @apply ml-2 text-[13px] tracking-wide truncate dark:text-light-gray text-dark-gray
+  @apply ml-2 text-[13px] tracking-wide truncate text-light-gray
 }
 
 .sideBarIconSize {
@@ -128,17 +128,17 @@ p {
 
 .tabButton {
   @apply cursor-pointer inline-flex p-4 border-b-2 border-transparent 
-  hover:border-orange-600 dark:hover:text-gray-300 transition duration-500
+  hover:border-orange-600 text-gray-300 transition duration-500
 }
 
 .buttonWithIcon {
-  @apply flex items-center px-5 py-2 text-sm text-gray-700 capitalize transition-colors duration-200 bg-transparent 
-  border gap-x-2  dark:text-gray-200 dark:border-gray-700 hover:bg-orange-600 hover:text-white
+  @apply flex items-center px-5 py-2 text-sm capitalize transition-colors duration-200 bg-transparent 
+  border gap-x-2  text-gray-200 border-gray-700 hover:bg-orange-600 hover:text-white
 }
 
 .button {
-  @apply px-5 py-2 text-sm text-gray-700 transition-colors duration-200 bg-transparent 
-  border gap-x-2  dark:text-gray-200 dark:border-gray-700 hover:bg-orange-600 hover:text-white
+  @apply px-5 py-2 text-sm transition-colors duration-200 bg-transparent 
+  border gap-x-2  text-gray-200 border-gray-700 hover:bg-orange-600 hover:text-white
 }
 
 .react-colorful__last-control {
